--- a/Lesson9/Maket_form.css
+++ b/Lesson9/Maket_form.css
@@ -10,24 +10,22 @@ form {
 }
 
 .label0 {
-    display: inline-block;
+    margin: 5px;
     width: 100%;
 }
 
 .labelN {
-    display: inline-block;
-    margin: 5px 0px 5px 5px;
-    width: 120px;
+    width: 180px;
+    float: left;
 }
 
-.text {
-    display: inline-block;
-    margin: 5px 5px 5px 60px;
-    width: 83%;
+#textin {
+    width: 97%;
 }
 
 .textin {
-    width: 98%;
+    display: block;
+    margin-left: 185px;
 }
 
 .select {
@@ -48,54 +46,19 @@ form {
     margin: 5px 5px 5px 4px;
 }
 
-.text1 {
+.textarea {
     width: 98%;
     margin-left: 5px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-@media screen and (max-width: 73em) {
-    .text {
-        display: inline-block;
-        margin: 5px 5px 5px 60px;
-        width: 80%;
-    }
-
-    .textin {
-        width: 98%;
-    }
-}
-
-@media screen and (max-width: 62em) {
-    .text {
-        display: inline-block;
-        margin: 5px 5px 5px 60px;
-        width: 77%;
-    }
-
-    .textin {
-        width: 98%;
-    }
-}
-
-@media screen and (max-width: 54em) {
-    .text {
-        display: inline-block;
-        margin: 5px 5px 5px 60px;
-        width: 72%;
-    }
-
-    .textin {
-        width: 98%;
-    }
-}
 
 @media screen and (max-width: 45em) {
-    .text {
+    .textin {
         display: inline-block;
-        width: 98%;
-        margin-left: 5px;
+        width: 100%;
+        margin-left: 0px;
         margin-top: 5px;
         margin-bottom: 5px;
         padding: 0;
